# todo-rs

./: .database-env-example  .env  .gitignore  Cargo.toml  Dockerfile  Jenkinsfile  README.md  configuration.yaml  docker-compose.yaml  sqlx-data.json
.github/workflows/: general.yml
.jenkins/: jenkinsfile
Jenkins/: .jenkinsfile
migrations/: 20230425142227_create_todo_table.sql
scripts/: init_db.sh
sql/: 00-initdb.sql  01-createdb.sql
src/: configuration.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/data/: mod.rs  todo.rs
src/routes/: health_check.rs  mod.rs  todos.rs
tests/: health_check.rs
