[package]
name = "todo-rust"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/andreanidouglas/todo-rs"
authors = ["Douglas Andreani"]
description = "A simple API for managing a Todo list"
readme = "README.md"
license-file = "LICENSE"

[lib]
path = "src/lib.rs"

[[bin]]
name = "todo-rust"
path = "src/main.rs"



[dependencies]
sqlx = { version = "^0.6", features = [ "runtime-tokio-native-tls" , "postgres" ] }
tokio = { version = "^1", features = ["full"] }
serde = { version = "^1", features = ["derive"] }
serde_json = "^1"
actix-web = "4.3.0"
env_logger = "0.10.0"

[dev-dependencies]
reqwest = {version = "^0.11"}
