[package]
name = "todo-rust"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/andreanidouglas/todo-rs"
authors = ["Douglas Andreani"]
description = "A simple API for managing a Todo list"
readme = "README.md"
license-file = "LICENSE"

[lib]
path = "src/lib.rs"

[[bin]]
name = "todo-rust"
path = "src/main.rs"



[dependencies]
tokio = { version = "^1", features = ["full"] }
serde = { version = "^1", features = ["derive"] }
serde_json = "^1"
actix-web = "4.3.0"
env_logger = "0.10.0"
config = "0.13"
uuid = { version = "1.3", features = ["v4"] }
chrono = { version = "0.4.22", default-features = false, features = ["clock"] }

[dependencies.sqlx]
version = "0.6"
default-features = false
features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate"
]

[dev-dependencies]
reqwest = {version = "^0.11"}
